--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/material": "^6.4.3",
     "@types/axios": "^0.14.4",
     "axios": "^1.7.9",
+    "js-cookie": "^3.0.5",
     "next": "15.1.6",
     "next-intl": "^3.26.3",
     "react": "^19.0.0",
@@ -21,6 +22,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
