--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@types/axios": "^0.14.4",
     "axios": "^1.7.9",
     "js-cookie": "^3.0.5",
-    "next": "15.1.6",
+    "next": "^15.5.9",
     "next-intl": "^3.26.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
